--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="//demo.productionready.io/main.css" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel='stylesheet' href="//code.ionicframework.com/1.3.3/css/ionic.min.css" type='text/css' />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap"
+    rel="stylesheet" />
+  <link rel=" manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>React App</title>
 </head>
