--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+  <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap"
+    rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React App</title>
 </head>
